 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 2
=============

* [DanielPharos]: QuArK should now be able to handle most PNG files correctly!

* [DanielPharos]: Updated VTF handling to use VTFLib. The HL2 memory leak is gone!
                   Also, VTF file loading AND saving is now working properly!

* [DanielPharos]: Added realtime OpenGL lighting and OpenGL transparency! Also added an option
          - for OpenGL face culling.

* [DanielPharos]: The tier0 and vstdlib dll files for HL2 can now be pointed to using the
          - configuration, so you don't need to copy them to the local QuArK directory anymore!

 * [cdunde]: Fixed errors that occur when switching layouts in the Model Editor.

 * [cdunde]: Stopped handles and limited line drawing in the Model Editor
          - Skin-view to increase reaction time when zooming.

 * [cdunde]: Add new Model Editor Views Options button and functions to reduce
          - handle drawing to increase reaction time.

 * [cdunde]: Stop the line, resizing bar, from drawing across the editors
          - when certain view pages were pulled out as floating windows.

 * [cdunde]: Added a detailed section to the Infobase Model Editor about the model structure.

 * [cdunde]: Updated Half-Life 2 textures-hl2.qrk and textures-hl2-cs.qrk files for new Beta
          - vtf method improving proper display and added material textures previously left out.

 * [cdunde]: Changed Half-Life2 files to work with QuArK Beta using vtf files instead of vmt files
          - and updated the Infobase Config. Specific Games section on their installation and use.

 * [cdunde]: Fixed the Paste Here function that was not working properly or at all in the views.
