@@ -15,6 +15,9 @@ $Id$
 6.5.0 Beta 2
 =============
 
+* [DanielPharos]: Fixed an access violation when trying to save MD3 files. Althought this is
+                  currently not supported, it doesn't wreck QuArK anymore.
+
 * [DanielPharos]: QuArK should now be able to handle most PNG files correctly!
 
 * [DanielPharos]: Updated VTF handling to use VTFLib. The HL2 memory leak is gone!
